--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
   font-family: "Raleway", serif;
 }
 main {
+  height: 500px;
   background-image: url(images/001.jpg);
+  background-size: cover;
   padding: 50px 100px;
 }
 header {
@@ -10,6 +12,8 @@ header {
 }
 header h1 {
   text-align: center;
+  font-size: 60px;
+  font-weight: 800;
 }
 .container {
   display: flex;
@@ -27,16 +31,43 @@ header p {
   flex-direction: column;
   width: 500px;
 }
-input,
-textarea {
+.form input {
   background-color: #18d1d1;
   color: white;
-
-  border: 3px;
+  display: block;
+  margin-top: 10px;
+  border: none;
+  line-height: 30px;
+  padding-left: 10px;
 }
+.form ::placeholder {
+  color: white;
+}
+
+.form textarea {
+  background-color: #18d1d1;
+  color: white;
+  display: block;
+  margin-top: 10px;
+  border: none;
+
+  padding-left: 10px;
+}
+
 .cont_info h3 {
   margin-bottom: 0;
 }
 .cont_info p {
   margin-top: 0;
+}
+footer {
+  background-color: #262626;
+  color: lightgray;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+}
+footer span {
+  color: rgb(255, 102, 128);
 }
